<?xml version="1.0"?>
<package format="2">
  <name>miller_welder_driver</name>
  <version>0.0.0</version>
  <description>The miller_welder_driver package</description>

  <maintainer email="sxh759@case.edu">William</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>odva_ethernetip</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
